src/objects/EMP_Production_Costs__c.object
<CustomObject>
    <fields>
        <fullName>Building_Depreciation__c</fullName>
        <label>Building Depreciation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Building_Total__c</fullName>
        <label>Building Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consultant_Name__c</fullName>
        <label>Consultant Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EMP_Production_Costs__c</fullName>
        <label>EMP Production Costs</label>
        <referenceTo>EMP_Farm__c</referenceTo>
        <relationshipLabel>EMP Productions Costs</relationshipLabel>
        <relationshipName>EMP_Productions_Costs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Equipment_Depreciation__c</fullName>
        <label>Equipment Depreciation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Equipment_Total__c</fullName>
        <label>Equipment Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Identification_Number__c</fullName>
        <label>Identification Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income__c</fullName>
        <label>Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NIT__c</fullName>
        <label>NIT</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <label>Organization Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Output_KG__c</fullName>
        <label>Output KG</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Output_TON__c</fullName>
        <label>Output TON</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plants_Number__c</fullName>
        <label>Plants Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Producer_Name__c</fullName>
        <label>Producer Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Productive_Sector__c</fullName>
        <label>Productive Sector</label>
        <picklist>
            <picklistValues>
                <fullName>Tomate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frijol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arroz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hortalizas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semillas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plantulacion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compostaje</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sale_Price__c</fullName>
        <label>Sale Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <label>Submission</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>EMP Productions Costs</relationshipLabel>
        <relationshipName>EMP_Productions_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplies_Total__c</fullName>
        <label>Supplies Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <label>System</label>
        <picklist>
            <picklistValues>
                <fullName>Convencional (tradicional)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Building_Depreciation__c</fullName>
        <label>Total Building Depreciation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Equipment_Depreciation__c</fullName>
        <label>Total Equipment Depreciation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Sell_Value__c</fullName>
        <label>Total Sell Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Wages__c</fullName>
        <label>Total Wages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Parcela de Aprendizaje</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replica</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Village__c</fullName>
        <description>Vereda</description>
        <label>Village</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>EMP Production Costs</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>EMP Production Costs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EMP Productions Costs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>